refactor generale + aggiunta API per creare booking